<resources>
    <string name="app_name">Overgrowth</string>
    <string name="text_awal">Kamu belum memiliki sebuah tanaman</string>
    <string name="text_mulai">Mulai</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dialog_action_tambah_tanaman_lama">Unggah Foto Tanaman</string>
    <string name="dialog_action_tambah_tanaman_baru">Mulai Menanam</string>
    <string name="text_atau">Atau</string>
    <string name="text_pilih_tanaman">Pilih Tanaman</string>
    <string name="text_pindai_tanaman">- Pindai tanah yang akan ditanami -</string>
    <string name="text_rekomendasi">Rekomendasi</string>
    <string name="text_sayuran_capital">SAYURAN</string>
    <string name="text_buah_capital">BUAH</string>
    <string name="text_hias_capital">HIAS</string>
    <string name="text_unggah_foto_tanaman">Unggah Foto Tanaman</string>
    <string name="text_mulai_menanam">Mulai Menanam</string>
    <string name="server_googleuser_client_id">771219402955-cqpje5krql6pi4l499k7nk717lh3g83f.apps.googleusercontent.com</string>
    <string name="text_cooming_soon">Coming Soon on the Next Updates</string>
    <string name="open_weather_maps_app_id">3ad9c1f534d5787ec8f4482a7f11678a</string>
    <string name="place_not_found">Sorry, no weather data found in this city.</string>
    <string name="text_lihat_dengan_virtual_reality">- Lihat tanaman dengan virtual reality -</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_deskripsitanaman">Deskripsi Tanaman</string>
    <string name="text_caramenanam">Cara Menanam</string>
    <string name="text_bacaselengkapnya">Baca selengkapnya</string>
    <string name="text_sudahpunyabibit">Sudah punya bibit ?</string>
    <string name="text_tanamsekarang">Tanam sekarang</string>
    <string name="text_tanyacobalagi">Coba lagi ?</string>
    <string name="text_pesankoneksiinternet">Pastikan smartphone kamu terhubung dengan Internet secara stabil!</string>
    <string name="text_data_tanaman">Data Tanaman</string>
    <string name="text_lihat_infotanaman">Tanaman</string>
    <string name="text_pengaturan">Pengaturan</string>
    <string name="text_logout">Logout</string>
    <string name="text_pengaturan_overgrowth">Pengaturan Overgrowth</string>
    <string name="text_hapus_tanaman">Hapus Tanaman</string>
    <string name="text_panen_tanaman">Tanaman Sudah Dipanen</string>
    <string name="text_pesanhapustanaman">Tanaman akan dihapus dari galeri tanaman peliharaan kamu</string>
    <string name="text_tanya_hapustanaman">Kamu yakin tidak ingin memelihara tanaman ini lagi ?</string>
    <string name="text_rating">Berikan Rating</string>
    <string name="text_slogan">Plant, Grow, Crops</string>
    <string name="text_pilih_langsung">Pilih Langsung</string>
</resources>
