<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".DetailTanamanUserBelumTanamActivity">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_margin="25dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:id="@+id/image_foto_detail_tanamanuser"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:id="@+id/textv_namadetail_tanamanuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Tanaman"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <TextView
        android:text="@string/text_caramenanam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/textv_cara_menanam_tanamanuser"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />
    <TextView
        android:id="@+id/textv_baca_selengkapnya_detail_tanamanuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bacaselengkapnya"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:textSize="15dp"
        android:textStyle="bold"
        />
    <TextView
        android:text="@string/text_sudahpunyabibit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:textSize="13dp"
        />
    <Button
        android:id="@+id/button_tanam_sekarang_detail_tanamanuser"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/text_tanamsekarang"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"
        />
</LinearLayout>
