<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MulaiTanamPilihanActivity">
    <include layout="@layout/toolbar"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:id="@+id/text_pindai_mulai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/text_pindai_tanaman"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        >
        <Button
            android:id="@+id/button_pilih_tanaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_pilih_tanaman"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/text_atau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_pilih_tanaman"
            android:layout_marginBottom="30dp"
            android:text="@string/text_atau"
            android:textAlignment="center"
            />

    </RelativeLayout>
</LinearLayout>
