<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PilihKategoriActivity">
    <include layout="@layout/toolbar"
        />
    <RelativeLayout
        android:id="@+id/rl_kategori_sayuran"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_sayuran">
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sayuran_capital"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/rl_kategori_buah"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_buah">
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_buah_capital"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/rl_kategori_hias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_hias">
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hias_capital"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
</LinearLayout>
